--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>Quito, Ecuador</h2>
             <p>Temperatura: 21°C</p>
             <p>Condiciones: Nublado</p>
+            <p>velocidad de viento: 2km</p>
         </div>
     </div>
 </body>
